--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@paralleldrive/cuid2": "^2.2.2",
+    "@prisma/client": "^5.13.0",
+    "@vercel/postgres": "^0.8.0",
+    "bcrypt": "^5.1.1",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
@@ -16,9 +20,12 @@
     "semantic-ui-react": "^2.1.5"
   },
   "devDependencies": {
+    "@types/node": "20.12.7",
+    "@types/react": "18.2.79",
     "eslint": "^8",
     "eslint-config-next": "14.2.2",
     "postcss": "^8",
+    "prisma": "^5.13.0",
     "tailwindcss": "^3.4.1"
   }
 }
