--- a/package.json
+++ b/package.json
@@ -6,14 +6,17 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "postinstall": "prisma generate"
   },
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
     "@prisma/client": "^5.13.0",
+    "@vercel/analytics": "^1.2.2",
     "@vercel/postgres": "^0.8.0",
     "bcrypt": "^5.1.1",
     "next": "14.2.2",
+    "postinstall": "^0.10.3",
     "react": "^18",
     "react-dom": "^18",
     "semantic-ui-css": "^2.5.0",
