--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "postinstall": "prisma generate"
+    "postinstall": "prisma generate && npx prisma migrate dev"
   },
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
