feat: auth flow, session management

--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "@prisma/client": "^5.13.0",
     "@vercel/analytics": "^1.2.2",
     "@vercel/postgres": "^0.8.0",
-    "bcrypt": "^5.1.1",
+    "iron-session": "^8.0.1",
     "next": "14.2.2",
+    "password-hash-and-salt": "^0.1.4",
     "postinstall": "^0.10.3",
     "react": "^18",
     "react-dom": "^18",
