--- a/package.json
+++ b/package.json
@@ -7,8 +7,7 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "vercel-build": "prisma generate && prisma migrate deploy && next build",
-    "prisma:generate": "prisma generate"
+    "postinstall": "prisma generate && npx prisma migrate dev"
   },
   "dependencies": {
     "@paralleldrive/cuid2": "^2.2.2",
